# animepahe-tui

./: README.md  pyproject.toml
animepahe/: __init__.py  anime_pahe.py  cli.py  client.py  main.py  rich_menu.py  theme.py  utils.py
animepahe/tests/: test_animepahe.py
animepahe/types/: __init__.py  episode_options.py  episodes_by_anime.py  search_results.py
